--- a/arch/arm64/configs/exynos2100-p3sxxx_defconfig
+++ b/arch/arm64/configs/exynos2100-p3sxxx_defconfig
@@ -25,7 +25,7 @@ CONFIG_LOCALVERSION_AUTO=y
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
-# CONFIG_SYSVIPC is not set
+CONFIG_SYSVIPC=y
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_USELIB is not set
@@ -165,7 +165,7 @@ CONFIG_SOCK_CGROUP_DATA=y
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
 # CONFIG_USER_NS is not set
-# CONFIG_PID_NS is not set
+CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_SCHED_EMS=y
 CONFIG_SCHED_EMS_TUNE=y
@@ -661,6 +661,7 @@ CONFIG_ARCH_HAVE_NMI_SAFE_CMPXCHG=y
 CONFIG_HAVE_ALIGNED_STRUCT_PAGE=y
 CONFIG_HAVE_CMPXCHG_LOCAL=y
 CONFIG_HAVE_CMPXCHG_DOUBLE=y
+CONFIG_IPC_NS=y
 CONFIG_ARCH_WANT_COMPAT_IPC_PARSE_VERSION=y
 CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP_FILTER=y
@@ -810,6 +811,7 @@ CONFIG_GKI_HIDDEN_HYPERVISOR_CONFIGS=y
 CONFIG_GKI_HACKS_TO_FIX=y
 CONFIG_GKI_OPT_FEATURES=y
 CONFIG_FREEZER=y
+CONFIG_USB_CONFIGFS_RNDIS=y
 
 #
 # Executable file formats
@@ -1068,7 +1070,7 @@ CONFIG_NETFILTER_XT_CONNMARK=y
 # Xtables targets
 #
 # CONFIG_NETFILTER_XT_TARGET_AUDIT is not set
-# CONFIG_NETFILTER_XT_TARGET_CHECKSUM is not set
+CONFIG_NETFILTER_XT_TARGET_CHECKSUM=y
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
 CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
@@ -1282,6 +1284,7 @@ CONFIG_NET_SCH_INGRESS=y
 #
 CONFIG_NET_CLS=y
 CONFIG_NET_CLS_BASIC=y
+CONFIG_NET_CLS_CGROUP=y
 # CONFIG_NET_CLS_TCINDEX is not set
 # CONFIG_NET_CLS_ROUTE4 is not set
 # CONFIG_NET_CLS_FW is not set
@@ -1343,7 +1346,7 @@ CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
 # CONFIG_CGROUP_NET_PRIO is not set
-# CONFIG_CGROUP_NET_CLASSID is not set
+CONFIG_CGROUP_NET_CLASSID=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
 CONFIG_BPF_JIT=y
@@ -1364,10 +1367,13 @@ CONFIG_BT=y
 CONFIG_BT_BREDR=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
-# CONFIG_BT_BNEP is not set
+CONFIG_BT_BNEP=y
 CONFIG_BT_HIDP=y
 CONFIG_BT_HS=y
 CONFIG_BT_LE=y
+CONFIG_BT_BNEP_MC_FILTER=y
+CONFIG_BT_BNEP_PROTO_FILTER=y
+CONFIG_BT_HCIVHCI=y
 # CONFIG_BT_LEDS is not set
 # CONFIG_BT_SELFTEST is not set
 
@@ -1565,8 +1571,9 @@ CONFIG_PCI_ENDPOINT=y
 # Generic Driver Options
 #
 # CONFIG_UEVENT_HELPER is not set
-# CONFIG_DEVTMPFS is not set
+CONFIG_DEVTMPFS=y
 CONFIG_STANDALONE=y
+CONFIG_SW_SYNC_USER=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 
 #
@@ -2370,7 +2377,7 @@ CONFIG_SERIO_LIBPS2=y
 # Character devices
 #
 CONFIG_TTY=y
-# CONFIG_VT is not set
+CONFIG_VT=y
 CONFIG_UNIX98_PTYS=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_SERIAL_NONSTANDARD is not set
@@ -2457,6 +2464,7 @@ CONFIG_HW_RANDOM_EXYNOS_SWD=m
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
 # CONFIG_DEVPORT is not set
+CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
 # CONFIG_XILLYBUS is not set
 CONFIG_RANDOM_TRUST_BOOTLOADER=y
 # end of Character devices
@@ -2503,7 +2511,7 @@ CONFIG_I2C_ALGOBIT=y
 # CONFIG_I2C_SIS96X is not set
 # CONFIG_I2C_VIA is not set
 # CONFIG_I2C_VIAPRO is not set
-
+CONFIG_USB_CONFIGFS_RMNET_BAM=y
 #
 # I2C system bus drivers (mostly embedded / system-on-chip)
 #
@@ -4511,6 +4519,7 @@ CONFIG_USB_EXTERNAL_NOTIFY=y
 CONFIG_USB_NOTIFY_PROC_LOG=y
 CONFIG_USB_HOST_SAMSUNG_FEATURE=y
 CONFIG_USB_HW_PARAM=y
+CONFIG_ANDROID_PARANOID_NETWORK=n
 CONFIG_USB_INTERFACE_LPM_LIST=y
 # CONFIG_USB_CCIC_NOTIFIER_USING_QC is not set
 CONFIG_USB_AUDIO_ENHANCED_DETECT_TIME=y
@@ -6029,8 +6038,8 @@ CONFIG_RAS=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_BINDERFS=y
-CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+CONFIG_ANDROID_BINDERFS=N
+CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder,anbox-binder,anbox-hwbinder,anbox-vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_ANDROID_VENDOR_HOOKS=y
 # end of Android
@@ -6754,6 +6763,7 @@ CONFIG_PSTORE_COMPRESS_DEFAULT="deflate"
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
+CONFIG_PSTORE_RAM_ANNOTATION_APPEND=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_EROFS_FS=y
